- fixed footer icon links spacing.

--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -56,7 +56,7 @@
 
     a {
       font-size: 1.8rem;
-      margin: 0 0.5rem;
+      margin: 0 0.65rem;
 
       .fa-brands {
         transition: all 0.3s;
